--- a/style.css
+++ b/style.css
@@ -18,3 +18,6 @@ Use it to make something cool, have fun, and share what you've learned with othe
 
 note: Text-Domain is directory name
 */
+body {
+  background-color: #456099;
+}
