implemented template-parts/blog/entry-meta & added new tempate-tag fn for <time> tags+ SEO

--- a/style.css
+++ b/style.css
@@ -26,3 +26,9 @@ img {
   width: 100%;
   height: auto;
 }
+
+/* Entry-meta */
+.updated:not(.published) {
+  // hidetime- class 'updated' in mrkup for SEO
+  display: none;
+}
