added template-tag cgr_awpt_pagination and implemented pagination on blog-page and single

--- a/style.css
+++ b/style.css
@@ -37,3 +37,10 @@ img {
 .nav-item:hover .dropdown-menu:not(.show) {
   display: block;
 }
+
+/* pagination */
+
+.page-numbers.current > span {
+  background-color: gray;
+  color: #ffF;
+}
