fixed error in register-sb and rearranged single.php/index.php  markup and some styling. see diff

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ Use it to make something cool, have fun, and share what you've learned with othe
 note: Text-Domain is directory name
 */
 body {
-  background-color: #456099;
+  // background-color: #456099;
 }
 
 img {
