--- a/assets/src/sass/main.scss
+++ b/assets/src/sass/main.scss
@@ -1,6 +1,6 @@
 // Essentials.
+// smaccs
 @import "essentials";
-
 // Generic
 @import "2-generic/generic";
 @import "2-generic/gutenberg";
@@ -9,5 +9,5 @@
 @import "4-layouts/posts/meta";
 @import "4-layouts/posts/pagination";
 @import "4-layouts/header/nav/navigation";
-
+//
 // Components
